<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city_name"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/current_temp"
        android:textSize="72sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_name" />

    <ImageView
        android:id="@+id/current_condition_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginEnd="24dp"
        android:importantForAccessibility="no"
        android:src="@drawable/sun_icon"
        app:layout_constraintBottom_toBottomOf="@id/current_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/current_temp" />

    <TextView
        android:id="@+id/feels_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/feels_temp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_temp" />

    <TextView
        android:id="@+id/low_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/low_temp"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feels_temp" />

    <TextView
        android:id="@+id/high_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/high_temp"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/low_temp" />

    <TextView
        android:id="@+id/humidity_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/humidity_percentage"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/high_temp" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/pressure"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/humidity_percentage" />

    <TextView
        android:id="@+id/feels_temp_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feels_temp_val"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="@id/current_temp"
        app:layout_constraintTop_toBottomOf="@id/current_temp" />

    <TextView
        android:id="@+id/low_temp_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/low_temp_val"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="@id/feels_temp"
        app:layout_constraintTop_toBottomOf="@id/feels_temp" />

    <TextView
        android:id="@+id/high_temp_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/high_temp_val"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="@id/feels_temp"
        app:layout_constraintTop_toBottomOf="@id/feels_temp" />

    <TextView
        android:id="@+id/humidity_percentage_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/humidity_percentage_val"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="@id/low_temp"
        app:layout_constraintTop_toBottomOf="@id/low_temp" />

    <TextView
        android:id="@+id/pressure_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/pressure_val"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@id/low_temp"
        app:layout_constraintTop_toBottomOf="@id/low_temp" />

    <Button
        android:id="@+id/forecastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecast"
        android:layout_marginBottom="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>